--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,11 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: userservice
+  labels:
+    app: spring-boot
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/actuator/prometheus"
+    prometheus.io/port: "8080"
 spec:
   selector:
     app: userservice
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8080         # Внутренний порт, по которому шлюз доступен в кластере
       targetPort: 8080   # Порт, на котором слушает контейнер
   type: ClusterIP      # Так сервис доступен только внутри кластера; внешний доступ обеспечит Ingress или NodePort
