--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,8 @@ management:
       show-details: always
   tracing:
     enabled: true
+    sampling:
+      probability: 1.0
 
 logging:
   level:
