А давай на другую ноду 2

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       automountServiceAccountToken: false
 #      nodeSelector:
-#        kubernetes.io/hostname: "vm-8ca664"  # Прямое указание ноды
+#        kubernetes.io/hostname: "vm-8ca664"
       tolerations:
         - key: "node-role.kubernetes.io/control-plane"
           operator: "Exists"
