--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://82.202.138.26:5430/hostelService
+    url: jdbc:otel:postgresql://82.202.138.26:5430/hostelService
 
 rabbitmq:
   notification-service:
