--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -44,7 +44,7 @@ spring:
         generate_statistics: false
 
   datasource:
-    url: jdbc:postgresql://hostelDB:5432/hostelService
+    url: jdbc:otel:postgresql://hostelDB:5432/hostelService
     username: hostel
     password: ilia
     driver-class-name: io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver
