--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -37,11 +37,29 @@ spring:
       ddl-auto: validate
     properties:
       hibernate:
+        session_factory:
+          observer:
+            instrumentation: opentelemetry
         jdbc:
           batch_size: 50
           order_inserts: true
           order_updates: true
+          fetch_size: 100
         generate_statistics: false
+        default_batch_fetch_size: 10
+        connection:
+          autocommit: false
+    # На будущее
+    #        cache:
+    #          use_second_level_cache: true
+    #          use_query_cache: true
+    #          region.factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
+    #        jakarta.cache:
+    #          provider: org.ehcache.jsr107.EhcacheCachingProvider
+    #          uri: classpath:ehcache.xml
+    #      sharedCache:
+    #        mode: ENABLE_SELECTIVE
+    open-in-view: false
 
   datasource:
     url: jdbc:otel:postgresql://hostelDB:5432/hostelService
