--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -14,6 +14,6 @@ spec:
   ports:
     - name: http
       protocol: TCP
-      port: 8080         # Внутренний порт, по которому шлюз доступен в кластере
-      targetPort: 8080   # Порт, на котором слушает контейнер
-  type: ClusterIP      # Так сервис доступен только внутри кластера; внешний доступ обеспечит Ingress или NodePort
+      port: 8080
+      targetPort: 8080
+  type: ClusterIP
